--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">WeatherSearch</string>
+    <string name="title">Local Weather</string>
+    <string name="tab_text_local">Local</string>
+    <string name="tab_text_today">Today</string>
+    <string name="tab_text_tomorrow">Tomorrow</string>
 </resources>
